--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^1.13.2",
     "express": "^4.16.4",
     "gm": "^1.23.1",
+    "mdn-browser-compat-data": "^1.0.20",
     "node-fetch": "^2.6.0",
     "puppeteer": "^1.10.0"
   }
