Add dataSource to feature list

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "caniuse-embed-screenshot-api",
+  "name": "caniuse-embed-api",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
